<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.AddMeetingActivity"
    android:id="@+id/activity_add_meeting">

    <TextView
        android:id="@+id/add_meeting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_horizontal"
        android:text="@string/add_meeting_tittle"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_start_date_and_time_meeting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="Date et heure de début"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_title"/>

    <TextView
        android:id="@+id/add_end_date_and_time_meeting"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="Date et heure de fin"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_start_date_and_time_meeting"/>

    <TextView
        android:id="@+id/add_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:hint="Salle :"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_meeting_room"/>

    <Spinner
        android:id="@+id/spinner_meeting_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        app:layout_constraintLeft_toRightOf="@+id/add_meeting_room"
        app:layout_constraintTop_toBottomOf="@+id/add_end_date_and_time_meeting"
        app:layout_constraintRight_toRightOf="parent"/>

    <MultiAutoCompleteTextView
        android:id="@+id/participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Participants"
        android:textSize="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:completionThreshold="1"
        app:layout_constraintTop_toBottomOf="@id/spinner_meeting_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meeting_subjectLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/participants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Titre"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_meeting"
            style="@style/Theme.AppCompat.DayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:enabled="false"
            android:text="Enregistrer"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/meeting_subjectLyt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>